fix: fixed the grid border and sizing in FILE pages

--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -77,8 +77,18 @@
             </div>
           </div>
           <div style="padding-top: 2em"></div>
-          <div id="divMyGrid">
+          <!-- <div id="divMyGrid">
             <table align="center" class="table"></table>
+          </div> -->
+          <div id="divMyGrid">
+            <table
+              align="center"
+              class="table"
+              style="width: 1284px; height: 720px"
+              border="1"
+              cellpadding="1"
+              cellspacing="1"
+            ></table>
           </div>
         </div>
         <div class="popupDataForm">
@@ -600,11 +610,6 @@
 
         // saveBtn.textContent = modalType === "create" ? "Create" : "Save changes";
         function saveHandler() {
-
-
-          
-
-
           const formData = {};
 
           // Collect form data
