--- a/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
@@ -183,7 +183,7 @@
 					// then we make the modal draggable
 					$(this).find(".modal-dialog").draggable({
 						handle: ".modal-header", // we will restrict dragging to the header
-						containment: "window"    // we prevent dragging outside the window box for popup container
+						// containment: "window"    // we prevent dragging outside the window box for popup container
 					});
 				});
 
