--- a/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
@@ -50,9 +50,9 @@
 								►&nbsp;<label for="lblGrdTitle">Grid title: </label>
 							</p>
 	
-							<table align="center" border="1" cellpadding="1" cellspacing="1" style="width: 500px">
-								<div id="divGrdMain" style="width: 600px; height: 600px;"></div>
-							</table>
+							<div align="center" >
+								<table id="divGrdMain" style="width: 1284px; height: 720px" border="1" cellpadding="1" cellspacing="1"></table>
+							</div>
 						</form>
 					</div>
 				</div>
