--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -144,10 +144,9 @@
 						<p>
 							►&nbsp;<label for="lblGrdTitle">Grid Content</label>
 						</p>
-
-						<table align="center" border="1" cellpadding="1" cellspacing="1" style="width: 500px">
-							<div id="divGrdMain" style="width: 1284px; height: 750px"></div>
-						</table>
+						<div align="center" >
+							<table id="divGrdMain" style="width: 1284px; height: 720px" border="1" cellpadding="1" cellspacing="1"></table>
+            </div>
 					</form>
 				</div>
 			</div>
