--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,7 +3,7 @@
 <th:block th:fragment="headFragment">
 	<head>
 		<meta charset="UTF-8">
-		<title>파일업로드</title>
+		<title th:text="${menuNm}"></title>
 		
 		<link rel="stylesheet" href="css/jquery-ui-1.13.3/jquery-ui.css" type="text/css" />
 		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick.grid.css" type="text/css" />
