--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -4,10 +4,10 @@
 	<script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
 
 	<!-- Sidebar 영역 -->
-	<aside class="navbar navbar-vertical navbar-expand-lg" data-bs-theme="dark" style="overflow: hidden; background-color: #0054a6">
+	<aside class="navbar navbar-vertical navbar-expand-lg navbar-transparent" style="overflow: hidden;">
 		
 		<!-- Sidebar 내부 전체 -->
-		<div class="container-fluid">
+		<div class="container-fluid" style="background-color: #0054a6;">
 
 			<!-- 상단 시스템명 iFrame2.0 -->
 			<div class="text-center mt-2 mb-2">
