--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="footerFragment">
-	<footer class="navbar navbar-expand-md d-none d-lg-flex d-print-none">
+	<footer class="navbar navbar-expand-md d-none d-lg-flex d-print-none sticky-bottom">
 		<div class="container-xl">
 			<div class="navbar-nav align-items-center flex-row order-md-last">
 						<span><a href="https://www.rnadatasystem.com" class="link-dark" target="_blank" rel="noopener" style="text-decoration: none;">Homepage</a></span>
