--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,29 +1,34 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="headerFragment">
-	<header class="navbar navbar-expand-md d-none d-lg-flex d-print-none">
+	<header class="navbar navbar-expand-md d-none d-lg-flex d-print-none sticky-top" style="background-color:#0054a6">
 		<div class="container-xl">
 			<div class="navbar-nav align-items-center flex-row order-md-last">
-				<span>
-				<a href="" class="link-dark" style="text-decoration: none;">
+				<span style="padding-left:30px;">
+				<a href="" class="link-light" style="text-decoration: none;">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-user-square-rounded"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 13a3 3 0 1 0 0 -6a3 3 0 0 0 0 6z" /><path d="M12 3c7.2 0 9 1.8 9 9s-1.8 9 -9 9s-9 -1.8 -9 -9s1.8 -9 9 -9z" /><path d="M6 20.05v-.05a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v.05" /></svg>
 					Mypage
 				</a>
 				</span>
 				<span style="padding-left:30px;">
-				<a href="https://www.notion.so/" class="link-dark" style="text-decoration: none;">
+				<a href="https://www.notion.so/" class="link-light" style="text-decoration: none;">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-report-search"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8 5h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h5.697" /><path d="M18 12v-5a2 2 0 0 0 -2 -2h-2" /><path d="M8 3m0 2a2 2 0 0 1 2 -2h2a2 2 0 0 1 2 2v0a2 2 0 0 1 -2 2h-2a2 2 0 0 1 -2 -2z" /><path d="M8 11h4" /><path d="M8 15h3" /><path d="M16.5 17.5m-2.5 0a2.5 2.5 0 1 0 5 0a2.5 2.5 0 1 0 -5 0" /><path d="M18.5 19.5l2.5 2.5" /></svg>
 					Manual
 				</a>
 				</span>
 				<span style="padding-left:30px;">
-				<a href="#" class="link-dark" style="text-decoration: none;" id="logoutButton">
+				<a href="#" class="link-light" style="text-decoration: none;" id="logoutButton">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-logout"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M14 8v-2a2 2 0 0 0 -2 -2h-7a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h7a2 2 0 0 0 2 -2v-2" /><path d="M9 12h12l-3 -3" /><path d="M18 15l3 -3" /></svg>
 					Logout
 				</a>
 				</span>
 			</div>
 			<!-- 작은 화면에서 아이콘 우측 정렬을 위한 공간 확보용 -->
-			<div class="collapse navbar-collapse" id="navbar-menu"></div>
+			<div class="collapse navbar-collapse" id="navbar-menu">
+				<marquee behavior="scroll" class="link-light">
+					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor" class="icon icon-tabler icons-tabler-filled icon-tabler-alert-triangle"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 1.67c.955 0 1.845 .467 2.39 1.247l.105 .16l8.114 13.548a2.914 2.914 0 0 1 -2.307 4.363l-.195 .008h-16.225a2.914 2.914 0 0 1 -2.582 -4.2l.099 -.185l8.11 -13.538a2.914 2.914 0 0 1 2.491 -1.403zm.01 13.33l-.127 .007a1 1 0 0 0 0 1.986l.117 .007l.127 -.007a1 1 0 0 0 0 -1.986l-.117 -.007zm-.01 -7a1 1 0 0 0 -.993 .883l-.007 .117v4l.007 .117a1 1 0 0 0 1.986 0l.007 -.117v-4l-.007 -.117a1 1 0 0 0 -.993 -.883z" /></svg>
+					If there is a notice for all users, please apply it to this area.
+				</marquee>
+			</div>
 		</div>
 	</header>
 	<script>
