--- a/src/main/resources/templates/views/user/passwordReset.html
+++ b/src/main/resources/templates/views/user/passwordReset.html
@@ -1,109 +1,73 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>비밀번호 초기화 신청</title>
-    <link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet" />
-    <link href="css/file-css.css" rel="stylesheet" />
-    <link href="css/common-css.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery-3.7.1.min.js"></script>
-    <script src="js/common.js"></script>
-    <script src="js/utils.js"></script>
-    <style>
-        body {
-            background-color: #d0d8e8;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        .form-container {
-            background-color: #f0f4fc;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            width: 350px;
-        }
-        .form-container .form-label {
-            font-size: 14px;
-            margin-bottom: 5px;
-        }
-        .form-container input, .form-container select {
-            width: calc(100% - 10px);
-            padding: 5px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-        }
-        .form-container button {
-            padding: 5px 10px;
-            background-color: #4a76a8;
-            color: white;
-            border: none;
-            border-radius: 3px;
-            cursor: pointer;
-            width: 100%;
-        }
-        .form-container button:hover {
-            background-color: #365f85;
-        }
-    </style>
-</head>
-<body>
+<!doctype html>
+<html lang="en">
+ 	<head>
+		<meta charset="utf-8"/>
+		<meta http-equiv="X-UA-Compatible" content="ie=edge; chrome=1"/>
+		<title>iFrame 2.0 - Cloud IFRS17 Closing Services</title>
+		<!-- CSS file -->
+		<link href="css/css-tabler/tabler.min.css?1692870487" rel="stylesheet"/>
+		<!-- Javascript file -->
+		<script src="js/js-tabler/tabler.min.js?1692870487" defer></script>
+		<script src="js/jquery-3.7.1.min.js"></script>
+		<script src="js/common.js"></script>
+    	<script src="js/utils.js"></script>
+		<style>
+			@import url('https://rsms.me/inter/inter.css');
+			:root {
+			--tblr-font-sans-serif: 'Inter Var', -apple-system, BlinkMacSystemFont, San Francisco, Segoe UI, Roboto, Helvetica Neue, sans-serif;
+			}
+		</style>
+	</head>
+	<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+		<div class="page page-center">
+    		<div class="container container-tight">
+    			<div class="text-center mb-5">
+					<span class="navbar-brand" data-bs-toggle="tooltip" data-bs-placement="top" title="Cloud IFRS17 Closing Services">
+					<span style="font-style: italic; font-size: 2em; font-family: Times New Roman; color: #0054a6;">i</span><span style="font-size: 2em; color: #0054a6;">Frame 2.0</span></span>
+				</div>
+			    <form class="card card-md" id="resetPasswordForm" name="resetPasswordForm" method="post" action="/auth/adamsFindPw" autocomplete="off" onsubmit="return false;">
+					<div class="card-body">
+						<h2 class="card-title text-center mb-4">Forgot password</h2>
+						<p class="text-secondary mb-4">Enter your information and your company administrator will reset your password and email you.</p>
 
-<div class="form-container">
-    <form id="resetPasswordForm" name="resetPasswordForm" method="post" action="/auth/adamsFindPw" autocomplete="off" onsubmit="return false;">
-        <div class="row">
-            <div class="col">
-                <!-- 회사번호구분 -->
-                <label for="companyDivision" class="form-label">Company Number Type</label>
-                <select id="companyDivision" name="companyDivision" class="form-select" required="required">
-                    <option selected="selected" value="">- select -</option>
-                    <option value="1">DUNS Number</option>
-                    <option value="2">Corporation Number</option>
-                    <option value="3">Business Registration Number</option>
-                </select>
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col">
-                <!-- 회사번호 -->
-                <label for="companyNo" class="form-label">Company number(without '-')</label>
-                <input id="companyNo" name="companyNo" type="text" class="form-control" placeholder="Enter Company Number" required="required" />
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col">
-                <!-- ID -->
-                <label for="userId" class="form-label">ID</label>
-                <input id="userId" name="userId" type="text" class="form-control" placeholder="Enter ID" required="required" />
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col">
-                <!-- 사용자전화번호 -->
-                <label for="userPhone" class="form-label">User Phone Number(without '-')</label>
-                <input id="userPhone" name="userPhone" type="text" class="form-control" placeholder="Enter Phone Number" required="required" />
-            </div>
-        </div>
-        <div class="row mt-3 text-center">
-            <div class="col">
-                <!-- 신청 -->
-                <button type="submit" class="btn btn-primary" onclick="submitRequest()">Apply</button>
-            </div>
-        </div>
-    </form>
-	<form id="form" name="form" method="post" action="/menuLink">
-		<input type="hidden" id="pageName" name="pageName" />
-	</form>
-</div>
+						<div class="form-floating mb-2">
+							<select class="form-select" id="companyDivision" name="companyDivision" autocomplete="off" required>
+								<option selected value="1">DUNS Number</option>
+								<option value="2">Corporation Number</option>
+								<option value="3">Business Registration Number</option>
+							</select>
+							<label for="companyDivision">type of your company identification</label>
+						</div>
+
+						<div class="form-floating mb-2">
+							<input type="text" class="form-control" id="companyNo" name="companyNo" maxLength="20" placeholder="your company number (without -)" autocomplete="off" required>
+							<label for="companyNo">your company number(without -)</label>
+						</div>
+						<div class="form-floating mb-2">
+							<input type="email" class="form-control" id="userId" name="userId" minLength="8" maxLength="50" placeholder="your@email.com" autocomplete="off" required>
+							<label for="userId">your@email.com</label>
+						</div>
+
+						<div class="form-floating mb-2">
+							<input type="text" class="form-control" id="userPhone" name="userPhone" maxLength="20" placeholder="your phone number(without -)" autocomplete="off" required>
+							<label for="userPhone">your phone number(without -)</label>
+						</div>
+
+						<div class="form-footer">
+							<button type="submit" class="btn btn-primary w-100" onclick="submitRequest()">Submit</button>
+						</div>
+			    </form>
+			</div>
+			<div class="text-center text-secondary mt-3">
+				Forget it, <a href="./login.html" id="gotomain" tabindex="-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Move to login page" style="text-decoration: none;">send me back</a> to the sign in screen.
+			</div>
+		</div>
+		<div class="text-center text-secondary mt-3 mb-3">
+			<span style="font-size: 0.7em;">Copyright © 2024 RNA Data System. All Rights Reserved.</span>
+		</div>
+		<form id="form" name="form" method="post" action="/menuLink">
+			<input type="hidden" id="pageName" name="pageName" />
+		</form>
 
 <script>
     function submitRequest() {
@@ -171,7 +135,33 @@
         });
     }
 
+	function goMenuPage (pageName) {
+		$("#pageName").val(pageName);
+		$("#form").submit();
+	};
+	$(document).ready(function () {
+		$('#gotomain').click(function(e){
+			e.preventDefault(); // 링크 기본 동작 방지
+			console.log("Pushed logoutButten.");
+			$.ajax({
+					type: "GET",
+					url: "/auth/adamsLogout",
+					async: true,
+					dataType: "json",
+					contentType: "application/json; charset=utf-8",
+					success: function (response, textStatus, xhr) {
+						if(xhr.status == 200) {
+						console.log("Success Logout. Go to Login page.");
+						goMenuPage("/login");
+						}
+					},
+					error: function(xhr, textStatus, errorThrown) {
+						console.error('Request failed: ' + textStatus);
+					}
+			});
+		});
+	});   
 </script>
 
-</body>
+	</body>
 </html>
