--- a/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
+++ b/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
@@ -245,7 +245,13 @@
           asyncEditorLoading: false,
           autoEdit: false,
           autoEditNewRow: false,
+          enableAutoResize: true
+          
         };
+        
+       /*  this.gridOptions = {
+          enableAutoResize: true
+        } */
 
         var newRowIds = 0;
 
