--- a/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
@@ -356,11 +356,8 @@
         enableAddRow: true,
         asyncEditorLoading: false,
         autoEdit: false,
-        autoEditNewRow: false
-        //enableAutoResize: true
+        autoEditNewRow: false,
       };
-      
-
 
       var newRowIds = 0;
 
@@ -510,8 +507,8 @@
         .getElementById("downloadExcel")
         .addEventListener("click", function () {
           const currDate = getCurrentDateTime();
-          const fileName = "BIZJNL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
-          const sheetName = "계정과목관리"; // 시트 이름
+          const fileName = "WRKFIL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
+          const sheetName = "파일관리"; // 시트 이름
           const gridColumns = columns; // SlickGrid의 컬럼 배열
           const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
           exportToExcel(fileName, sheetName, gridColumns, gridData);
@@ -669,13 +666,9 @@
 
           if (modalType === "create") {
             // Add new item to grid data
-            console.log("create");
             if (checkData(formData)) {
-              //formData[unqId] = grid.getDataLength() + 1;
+              formData[unqId] = grid.getDataLength() + 1;
               dataView.insertItem(grid.getDataLength(), formData);
-              insertFile(formData);
-              
-              console.log(formData);
             } else {
               alert("Please fill out all required fields.");
               return;
@@ -693,7 +686,6 @@
             if (isChanged) {
               formData[unqId] = originalData[unqId];
               dataView.updateItem(originalData[unqId], formData);
-              updateFile(formData);
             } else {
               alert("No changes detected.");
               return;
