--- a/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL002M0.html
@@ -501,9 +501,8 @@
           if (modalType === "create") {
             // Add new item to grid data
             if (checkData(formData)) {
-              //formData[unqId] = grid.getDataLength() + 1;
+              formData[unqId] = grid.getDataLength() + 1;
               dataView.insertItem(grid.getDataLength(), formData);
-              inserFile(formData);
             } else {
               alert("Please fill out all required fields.");
               return;
@@ -521,7 +520,6 @@
             if (isChanged) {
               formData[unqId] = originalData[unqId];
               dataView.updateItem(originalData[unqId], formData);
-              updateFile(formData);
             } else {
               alert("No changes detected.");
               return;
