--- a/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL001M0.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html
   lang="ko"
@@ -356,8 +357,11 @@
         enableAddRow: true,
         asyncEditorLoading: false,
         autoEdit: false,
-        autoEditNewRow: false,
+        autoEditNewRow: false
+        //enableAutoResize: true
       };
+      
+
 
       var newRowIds = 0;
 
@@ -507,8 +511,8 @@
         .getElementById("downloadExcel")
         .addEventListener("click", function () {
           const currDate = getCurrentDateTime();
-          const fileName = "WRKFIL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
-          const sheetName = "파일관리"; // 시트 이름
+          const fileName = "BIZJNL001_FM_" + currDate; // 원하는 파일 이름으로 변경 가능
+          const sheetName = "계정과목관리"; // 시트 이름
           const gridColumns = columns; // SlickGrid의 컬럼 배열
           const gridData = dataView.getItems(); // SlickGrid의 데이터 배열
           exportToExcel(fileName, sheetName, gridColumns, gridData);
@@ -666,9 +670,13 @@
 
           if (modalType === "create") {
             // Add new item to grid data
+            console.log("create");
             if (checkData(formData)) {
-              formData[unqId] = grid.getDataLength() + 1;
+              //formData[unqId] = grid.getDataLength() + 1;
               dataView.insertItem(grid.getDataLength(), formData);
+              insertFile(formData);
+              
+              console.log(formData);
             } else {
               alert("Please fill out all required fields.");
               return;
@@ -686,6 +694,7 @@
             if (isChanged) {
               formData[unqId] = originalData[unqId];
               dataView.updateItem(originalData[unqId], formData);
+              updateFile(formData);
             } else {
               alert("No changes detected.");
               return;
