--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -56,6 +56,23 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
+		<!-- litepicker library for making a datepicker -->
+		<script
+			src="js/libs-tabler/nouislider/dist/nouislider.min.js?1692870487"
+			defer
+		></script>
+		<script
+			src="js/libs-tabler/litepicker/dist/litepicker.js?1692870487"
+			defer
+		></script>
+		<script
+			src="js/libs-tabler/tom-select/dist/js/tom-select.base.min.js?1692870487"
+			defer
+		></script>
+
+		<!-- chartjs library for making a charts --> 
+		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 		<style>
 			@import url("https://rsms.me/inter/inter.css");
 			
@@ -69,6 +86,68 @@
 			}
 			
 		</style>
+		</script>
+		<script>
+	  // @formatter:off
+	  document.addEventListener("DOMContentLoaded", function () {
+		window.Litepicker && (new Litepicker({
+			element: document.getElementById('datepicker-default'),
+			buttonText: {
+				previousMonth: `<!-- Download SVG icon from http://tabler-icons.io/i/chevron-left -->
+	  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M15 6l-6 6l6 6" /></svg>`,
+				nextMonth: `<!-- Download SVG icon from http://tabler-icons.io/i/chevron-right -->
+	  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 6l6 6l-6 6" /></svg>`,
+			},
+		}));
+	  });
+	  // @formatter:on
+	  </script>
+		<script>
+	  // @formatter:off
+	  document.addEventListener("DOMContentLoaded", function () {
+		window.Litepicker && (new Litepicker({
+			element: document.getElementById('datepicker-icon'),
+			buttonText: {
+				previousMonth: `<!-- Download SVG icon from http://tabler-icons.io/i/chevron-left -->
+	  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M15 6l-6 6l6 6" /></svg>`,
+				nextMonth: `<!-- Download SVG icon from http://tabler-icons.io/i/chevron-right -->
+	  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 6l6 6l-6 6" /></svg>`,
+			},
+		}));
+	  });
+	  // @formatter:on
+	  </script>
+		<script>
+	  // @formatter:off
+	  document.addEventListener("DOMContentLoaded", function () {
+		window.Litepicker && (new Litepicker({
+			element: document.getElementById('datepicker-icon-prepend'),
+			buttonText: {
+				previousMonth: `<!-- Download SVG icon from http://tabler-icons.io/i/chevron-left -->
+	  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M15 6l-6 6l6 6" /></svg>`,
+				nextMonth: `<!-- Download SVG icon from http://tabler-icons.io/i/chevron-right -->
+	  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 6l6 6l-6 6" /></svg>`,
+			},
+		}));
+	  });
+	  // @formatter:on
+	  </script>
+		<script>
+	  // @formatter:off
+	  document.addEventListener("DOMContentLoaded", function () {
+		window.Litepicker && (new Litepicker({
+			element: document.getElementById('datepicker-inline'),
+			buttonText: {
+				previousMonth: `<!-- Download SVG icon from http://tabler-icons.io/i/chevron-left -->
+	  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M15 6l-6 6l6 6" /></svg>`,
+				nextMonth: `<!-- Download SVG icon from http://tabler-icons.io/i/chevron-right -->
+	  <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 6l6 6l-6 6" /></svg>`,
+			},
+			inlineMode: true,
+		}));
+	  });
+	  // @formatter:on
+	  </script>
 	</head>
 </th:block>
 </html>
