화면 윗단 공백, create, 팝업 drag 수정

--- a/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
+++ b/src/main/resources/templates/views/biz/adt/BIZADT001M0.html
@@ -30,7 +30,7 @@
                       name="inpSearchTxt"
                       type="text"
                       class="form-input-temp"
-                      placeholder="Input Name"
+                      placeholder="Account Title/Name"
                     />
                     <button
                       type="button"
@@ -264,7 +264,7 @@
             grid.registerPlugin(new Slick.AutoTooltips());
             
             // set keyboard focus on the grid
-            grid.getCanvasNode().focus();
+            //grid.getCanvasNode().focus();
             grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
             
             grid.onAddNewRow.subscribe(function (e, args) {
