--- a/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
+++ b/src/main/resources/templates/views/biz/fst/BIZFST002M0.html
@@ -323,7 +323,7 @@
           grid.registerPlugin(new Slick.AutoTooltips());
 
           // set keyboard focus on the grid
-          grid.getCanvasNode().focus();
+          //grid.getCanvasNode().focus();
           grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
 
           grid.onAddNewRow.subscribe(function (e, args) {
