--- a/src/main/resources/templates/views/biz/jnl/BIZJNL003M0.html
+++ b/src/main/resources/templates/views/biz/jnl/BIZJNL003M0.html
@@ -29,7 +29,7 @@
                       name="inpSearchTxt"
                       type="text"
                       class="form-input-temp"
-                      placeholder="Input Name"
+                      placeholder="Account Title/Name"
                     />
                     <button
                       type="button"
@@ -328,7 +328,7 @@
         grid.registerPlugin(new Slick.AutoTooltips());
 
         // set keyboard focus on the grid
-        grid.getCanvasNode().focus();
+        //grid.getCanvasNode().focus();
         grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
 
         grid.onAddNewRow.subscribe(function (e, args) {
@@ -440,10 +440,10 @@
         // Define the modal title based on action
         if (modalTitleElem) {
           if (modalType === "create") {
-            modalTitleElem.textContent = "Create a new report";
+            modalTitleElem.textContent = "NEW";
             // modalTitleElem.className = "mb-3";
           } else if (modalType === "edit") {
-            modalTitleElem.textContent = "Edit report";
+            modalTitleElem.textContent = "EDIT";
             originalData = JSON.parse(JSON.stringify(dataContext)); // Save original data for comparison
           }
         } else {
