--- a/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
+++ b/src/main/resources/templates/views/wrk/bat/WRKBAT003M0.html
@@ -41,7 +41,7 @@
                       name="inpSearchTxt"
                       type="text"
                       class="form-input-temp"
-                      placeholder="Input Name"
+                      placeholder="Program ID/Name"
                       value=""
                     />
                     <button
@@ -323,7 +323,7 @@
         grid.registerPlugin(new Slick.AutoTooltips());
 
         // set keyboard focus on the grid
-        grid.getCanvasNode().focus();
+        //grid.getCanvasNode().focus();
         grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
 
         grid.onAddNewRow.subscribe(function (e, args) {
