--- a/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL002M0.html
@@ -12,7 +12,7 @@
 
 					<div class="form-container">
 						<div class="form-box">
-							<form id="filter-form" name="form" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
+							<form id="filter-form" name="form" method="post" action="/WRKFIL002M0SelectList" onsubmit="return false;">
 								<div class="row">
 									<div class="col">
 										<label for="fileDropdown">Select a file:</label>
@@ -398,7 +398,7 @@
 	          grid.registerPlugin(new Slick.AutoTooltips());
 	
 	          // set keyboard focus on the grid
-	          grid.getCanvasNode().focus();
+	          //grid.getCanvasNode().focus();
 	          grid.registerPlugin(new Slick.CellExternalCopyManager(pluginOptions));
 	
 	          grid.onAddNewRow.subscribe(function (e, args) {
@@ -526,9 +526,9 @@
 	
 	            if(modalTitleElem){
 	              if(modalType ==="create"){
-	                modalTitleElem.textContent = "Create a new file";
+	                modalTitleElem.textContent = "NEW";
 	              } else if(modalType === "edit"){
-	                modalTitleElem.textContent = "Edit the file";
+	                modalTitleElem.textContent = "EDIT";
 	                originalData = JSON.parse(JSON.stringify(dataContext));
 	              }
 	            }
