화면명/네비게이션 적용

--- a/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL003M0.html
@@ -3,10 +3,9 @@
 	<th:block layout:fragment="content">
 		<div class="page-wrapper" id="page-wrapper">
 			<div class="container" id="'container">
-				<h2>File Upload</h2>
+				<h2>[[${menuNm}]]</h2>
 				<div class="ptag-container">
-					<span><a href="#"> Home ></a></span>
-					<span><a href="#"> File Upload2</a></span>
+					<span>[[${navigator}]]</span>
 					<div class="form-container">
 						<div class="form-box">
 							<form id="divSearch" name="divSearch" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
