--- a/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL004M0.html
@@ -16,9 +16,9 @@
     ></script>
 	<div class="page-wrapper" id="page-wrapper">
 		<div class="container" id="'container">
-			<h2>Load History</h2>
+			<h2>[[${menuNm}]]</h2>
 			<div class="ptag-container">
-				<span><a href="#"> Home ></a></span> <span><a href="#"> Load History</a></span>
+				<span>[[${navigator}]]</span>
 				<div class="form-container">
 					<div class="form-box">
 						<form id="divSearch" name="divSearch" method="post" action="/WRKFIL001M0SelectList" onsubmit="return false;">
