--- a/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
+++ b/src/main/resources/templates/views/wrk/fil/WRKFIL001M0.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 <html
-  lang="ko"
+  lang="en"
   xmlns:th="http://www.thymeleaf.org"
   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
   layout:decorate="~{layout/layout}"
@@ -10,10 +10,10 @@
     <script src="js/js-tabler/demo-theme.min.js?1692870487"></script>
     <div class="page-wrapper" id="page-wrapper">
       <div class="container" id="container">
-        <h2>File Management System</h2>
+        <h2>[[${menuNm}]]</h2>
         <div class="ptag-container">
           <!-- <span><a href="#"> Home ></a></span> -->
-          <span><a href="#"> File/Table Mapping</a></span>
+          <span>[[${navigator}]]</span>
           <div class="form-container">
             <div class="form-box">
               <form
